<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NestedScrollBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="@dimen/dimen5dp"
                    android:background="@drawable/ic_left_arrow"
                    android:backgroundTint="@color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/robotomedium"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen20dp">


            </TextView>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/lightGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen50dp"
                android:layout_marginRight="@dimen/dimen50dp"
                android:background="@drawable/blackborder"
                android:hint="@string/old_password"
                android:padding="10dp" />

            <EditText

                android:layout_marginLeft="@dimen/dimen50dp"
                android:layout_marginRight="@dimen/dimen50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blackborder"
                android:hint="@string/new_password"
                android:padding="10dp" />

            <EditText

                android:layout_marginLeft="@dimen/dimen50dp"
                android:layout_marginRight="@dimen/dimen50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blackborder"
                android:hint="@string/confirm_password"
                android:padding="10dp" />

            <TextView
                android:layout_marginTop="@dimen/dimen30dp"
                android:layout_marginLeft="@dimen/dimen50dp"
                android:layout_marginRight="@dimen/dimen50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_with_semicircle_edge"
                android:gravity="center"
                android:maxLines="1"
                android:padding="13dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
