<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Edit_profile">


    <!--Top Header Layout-->
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/bottomnavigation"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backpress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"

            android:src="@drawable/ic_left_arrow" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">


        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#96A1AB"
                android:gravity="center"
                android:minHeight="180dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/dotted">

                    <ImageView
                        android:id="@+id/iv_profile_background"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="2dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_prfofile_photo_nav_drawer"
                        android:visibility="visible" />

                    <!--<ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:padding="15dp"
                        android:src="@drawable/ic_camera_small"
                        android:visibility="visible"/>-->

                    <ImageView
                        android:id="@+id/iv_profile_photo"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:src="@drawable/ic_prfofile_photo_nav_drawer"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/changeImage"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="right"
                        android:onClick="onPhotoEditClick"
                        android:src="@drawable/ic_edit_button" />

                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp">


                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text=" Full Name" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/round_grey_corners"
                        android:hint="Enter Full Name "
                        android:padding="10dp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text=" Email ID" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/round_grey_corners"
                        android:hint="Enter Email ID"
                        android:padding="10dp" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text=" Mobile Number" />

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/round_grey_corners"
                        android:hint=" Enter  Mobile Number "
                        android:inputType="number"
                        android:padding="10dp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/changepassword"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:background="@drawable/round_grey2_corners"
                    android:layout_height="60dp"
                    android:layout_width="match_parent">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:fontFamily="@font/robotomedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:minHeight="@dimen/dimen10dp"
                            android:text="@string/change_password"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dimen18sp" />


                    </LinearLayout>


                    <ImageView
                        android:layout_gravity="center"
                        style="@style/MenuItemArrow"
                        android:layout_marginLeft="115dp"
                        app:srcCompat="@drawable/ic_right_arrow"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen70dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen5dp"
                    android:paddingTop="10dp">





                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/lightGrey" />

                <LinearLayout
                    android:id="@+id/bottom"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/dimen5dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_grey_corners"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="@dimen/dimen5dp"
                            android:text="@string/cancel"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dimen5dp"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_effect_with_semicircle_edge"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="@dimen/dimen5dp"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>




